fixed layout issues for items and forms

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -32,7 +32,7 @@ input[type=number] {
 #hero-image {
 	height: 94vh;
 	opacity: 1;
-	transition: opacity 800ms;
+	transition: opacity 500ms;
 	z-index: -1;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -45,6 +45,10 @@ input[type=number] {
 }
 
 #hero-image.fade-out {
+	opacity: 0;
+}
+
+#hero-image.fade-in {
 	opacity: 0;
 }
 
@@ -97,8 +101,12 @@ input.value-display {
 	font-size: 1.24rem;
 }
 
-.col-centered {
-	margin: 0 auto;
+
+
+@media only screen and (min-width: 768px) {
+	.col-md-centered {
+		margin: 0 auto;
+	}
 }
 
 // didn't look good on mobile device
